Added create user endpoint & validation middleware
